2010-07-28  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #15266: mod2 "Template Files" uses wrong list-header styling 

2010-07-25  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #15235: default preview container misses closing strong-tag 
	* Fixed bug: #14881: Mapping elements with multiple classes results in error: No placeholder found for path... 
	* Fixed bug: #15234: Exception in tceform if datastructure not found 
	* Fixed issue: #14140: TemplaVoila should use sprite icons / pt.3
	* Fixed issue: #15233: TV should support mod.web_list.newContentWiz.overrideWithExtension 
	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - hidden elements adjustments

2010-07-24  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #14140: TemplaVoila should use sprite icons / pt.2
	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - typo/whitespacefix
	* Fixed issue: #14140: TemplaVoila should use sprite icons / pt.1

2010-07-23  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15217: new content wizard should use docHeader
	* Fixed issue: #10911: Design: non-used elements are too crowded
	* Fixed issue: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4
	* Fixed issue: #15209: mod1 -> render_singleSheet uses html table for "styling" 

2010-07-20  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #3903: ACL problem: "edit content" doesn't work (Thanks to Bernhard Kraft)

2010-07-19  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #13699: static Data Structures not listed in the TemplaVoilà Control Center
	* Fixed issue: #15178: FCE editing forms should match built-in content elements (Thanks to Jeff Segars)

2010-07-17  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue: #15158: XCLASS inclusion inclass.tx_templavoila_label.php wrong 
	* Fixed issue: #15157: tx_staticdstools doesn't follow naming schema