@@ -1,5 +1,6 @@
 2010-07-28  Tolleiv Nietsch <nietsch@aoemedia.de>
 
+	* Follow-up to: #14694: FlashMessage should be used instead of individual message formats
 	* Fixed bug: #15266: mod2 "Template Files" uses wrong list-header styling 
 
 2010-07-25  Tolleiv Nietsch <nietsch@aoemedia.de>
